feat(watchdog): New watchdog driver! fix(socket): Alacritty doesnt fault revamp(userland): all of patches in user apps are gone for more native kernel some of the following apps has problem (vlc, minecraft, badwolf, lightdm)